Fix align og nav-menu

--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ figure > img {
 .nav-menu a {
     display: flex;
     gap: 10px;
+    align-items: center;
 }
 
 .nav-menu img {
